# impactproof

./: README.md  impactproof.yaml  pyproject.toml  requirements.txt  ui_app.py
data/: sample.csv
src/impactproof/: __main__.py  cli.py  config.py
src/impactproof.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/impactproof/checks/: completeness.py  consistency.py  drift.py  duplicates.py
src/impactproof/standardize/: missing_labels.py
